@@ -1,1 +1,1 @@
-<div style="background-color: #212121; color: #aaafb6; font-family: 'JetBrains Mono', monospace; font-size: 9.8pt;"><pre><span style="font-size: 18px; color: #ffffff; font-weight: bold;">2.3-b03d</span><br /><strong style="color: #ffffff;">* Chameleons can now be bred using their normal taming items (fish, spider eye), but only once</strong><br />      - This is to make chameleons slightly easier to obtain, and help with scarcity on larger servers<br />      - Baby chameleons only shed chameleon molt upon growing up, then shed normally as an adult<br />- Chameleons now drop 1 chameleon molt when killed, except if they are a baby<br />- Made baby chameleons slightly smaller<br /><br /><u><strong style="font-size: 14px; color: #ffffff;">Fixes:</strong></u><br /><strong style="color: #ffffff;">* Fixed server configs not syncing to clients in many cases</strong><br /><strong style="color: #ffffff;">* Fixed the temperature inside generated structures being freezing cold if not defined in the configs</strong><br /><strong style="color: #ffffff;">* Fixed crash when displaying item tooltips in some cases</strong><br />- Fixed armor insulation tooltip not displaying the correct amount of insulation in some cases<br /><br /><u><strong style="font-size: 14px; color: #ffffff;">Technical Changes:</strong></u><br /><strong style="color: #ffffff;">* Config settings for biomes, dimensions, structures, and items have much more robust logging and are less prone to failure in cases where the option is malformed</strong><br /></pre></div></body></html>
+<div style="background-color: #212121; color: #aaafb6; font-family: 'JetBrains Mono', monospace; font-size: 9.8pt;"><pre><span style="font-size: 18px; color: #ffffff; font-weight: bold;">2.3-b04a</span><br /><strong style="color: #ffffff;">* (1.20) Added Origins integration as a standalone mod:</strong><br />      - Allows for users to modify the attribute values that players spawn with for origins via datapacks or config files<br />      - This could already be done for your own origins via attribute modifiers, but this addon is useful for modpack devs<br />- Added the option for food items to change the player's temperature for a set duration, like soul sprouts<br /><span style="color: #ff9900;">      ! The soul sprout will lose this effect until item-settings.toml is reset</span><br />- Increased the duration of the soul sprout's effect to 1 minute<br />- Changed the functionality of waterskins slightly:<br />      - The drink function is now performed by crouching and right-clicking<br />      - The pour function has returned to being the default right-click action<br />      - Removed the extra "When Swung" tooltip, as both actions can be considered "consuming" the item<br />- The soulspring lamp now emits particles while in use to help signify its area of effect<br />- Removed the body temperature readout (number displaying body temperature) completely<br />- Updated the high-contrast variants of the body and vague world temperature icons<br />``<br /><u><strong style="font-size: 14px; color: #ffffff;">Fixes:</strong></u><br />- Fixed the tooltip for temperature-affecting foods sometimes being in the wrong place<br />- Fixed the /temp debug command sometimes misreporting the player's temperature and how it is being affected<br />- Fixed the config settings for body and world temperature gauge position overlapping their label if the text is too long<br />- Fixed the ice resistance potion recipe accepting any potion as input instead of just awkward potions<br />- Fixed the boiler not heating up waterskins if the temperature rate isn't set to a multiple of 1<br />- Fixed uncommon crash when closing the config menu<br />- Fixed the /temp debug command giving an error for any trait that doesn't have a corresponding attribute type<br />- (1.16) Fixed the body temperature icon rendering in front of the vague world temperature (frame around the body icon)<br />- (1.16) Fixed the soulspring lamp not affecting nearby players<br /><br /><u><strong style="font-size: 14px; color: #ffffff;">Technical Changes:</strong></u><br />- All methods that add/remove/replace TempModifiers now have more advanced options for handling duplicates:<br />      - This replaces the old "allowDupes" parameter<br />      - ALLOW: Allows duplicates of this TempModifier to exist on the entity<br />      - BY_CLASS: Adding/replacing a TempModifier fails if one of the same class is already present<br />      - EXACT: Adding/replacing a TempModifier fails if there is an instance of the same class and matching NBT present<br /><span style="color: #ff9900;">      ! The old methods with the "allowDupes" parameter are still present, but are now deprecated and marked for removal in a future version</span><br /></pre></div></body></html>
