@@ -2097,7 +2097,7 @@ Fixes:
 - The soulspring lamp now emits particles while in use to help signify its area of effect
 - Removed the body temperature readout (number displaying body temperature) completely
 - Updated the high-contrast variants of the body and vague world temperature icons
-
+``
 Fixes:
 - Fixed the tooltip for temperature-affecting foods sometimes being in the wrong place
 - Fixed the /temp debug command sometimes misreporting the player's temperature and how it is being affected
@@ -2105,6 +2105,7 @@ Fixes:
 - Fixed the ice resistance potion recipe accepting any potion as input instead of just awkward potions
 - Fixed the boiler not heating up waterskins if the temperature rate isn't set to a multiple of 1
 - Fixed uncommon crash when closing the config menu
+- Fixed the /temp debug command giving an error for any trait that doesn't have a corresponding attribute type
 - (1.16) Fixed the body temperature icon rendering in front of the vague world temperature (frame around the body icon)
 - (1.16) Fixed the soulspring lamp not affecting nearby players
 
